--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					<div class="section__content">
 						<h2 class="section__title">Hello</h2>
 						<p class="section__description"><span class="section__description-inner">Mumbai App Developers is a monthly meetup in Mumbai, that aims to bring the developer community together to learn, teach, discuss, share, and most importantly, form lasting connections.
-						<br>We're one big, welcoming bunch, all backgrounds, genders, skill levels and outlooks invited. <br>Talk to us at <a class="content__email" href="mailto:madmeetup.mail@gmail.com"> madmeetup.mail@gmail.com</a></span></p>
+						<br>We're one big, welcoming bunch, all backgrounds, genders, skill levels and outlooks invited. <br>Talk to us at <a class="content__email" href="mailto:madmeetup.mail@gmail.com"> hello@madmeetup.com</a></span></p>
 						<br><br>
 						<a target="_blank" href="https://goo.gl/forms/L4jHOBLdUz0T43vo2">
 							<button class="content__register">Register for the next meetup!</button>
