--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 						</li>
 						<li class="section__details-item">
 							<h3 class="section__details-title">Venue</h3>
-							<span class="section__details-detail">Zone Startups, <br>Bombay Stock Exchange</span>
+							<span class="section__details-detail"><a href="https://maps.google.com/?cid=3334629135287173618&hl=en&gl=in">Pepperfry Office, <br>801 & 802, B'Wing, <br>247 Park, Gandhi Nagar, <br>Vikhroli West, Mumbai, Maharashtra 400083</href></span>
 						</li>
 						<li class="section__details-item">
 							<h3 class="section__details-title">Timing</h3>
